1st proof reading

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
       <div class="pages d-block w-50">
         <p>It was 3 a.m. I was on a <span data-content="T i' nee">tiny</span> <span data-content="sh ip">ship</span> in the <span data-content="mid d L">middle</span>
-        of the <span data-content="O' ce an">ocean</span> <span data-content="w o' king">working</span> for a <span data-content="T e' m">Team</span> of
-        Ocean <span data-content="Ex' p lor ers">Explorers</span> with my <span data-content="c r (ew-u' )">crew</span> <span>mates</span> Bill, Josh, and Joe the
+        of the <span data-content="O' ce an">ocean</span> <span data-content="w o' king">working</span> for a <span data-content="t e' m">team</span> of
+        ocean <span data-content="Ex' p lor ers">explorers</span> with my <span data-content="c r (ew-u' )">crew</span> <span>mates</span> Bill, Josh, and Joe the
         <span data-content="cap ta' n">captain</span>. We were about to <span data-content="la un ch">launch</span> the <span data-content="un der water">underwater</span>
-        <span data-content="sub ma rine">submarine</span> when a big <span data-content="wa' v">wave</span> <span data-content="s ma sh ed">smashed</span></p>
+        <span data-content="sub ma rine">submarine</span> when a big <span data-content="wa' v">wave</span> <span data-content="s ma sh ed">smashed</span> <span data-content="a ga'in st">against</span> the side</p>
         <div class="page-number">
           1
         </div>
@@ -96,9 +96,9 @@
     <div class="carousel-item carousel2">
 
       <div class="pages d-block w-50">
-        <p><span data-content="a ga'in st">against</span> the side of our boat <span data-content="sen ding">sending</span> me <span data-content="o'ver b or d">overboard</span>.
+        <p> of the vessel <span data-content="sen ding">sending</span> me <span data-content="o'ver b or d">overboard</span>.
         My life <span data-content="pre ser ver">preserver</span> <span data-content="im me' de' ate ly">immediately</span> <span data-content="in fla' t ed">inflated</span> upon
-        <span data-content="con ten t">contact</span> with <span data-content="wa ter">water</span>. What was that? It wasn't <span data-content="sup po's ed">supposed</span> to be <span data-content="st or my-(me)">stormy</span> today,
+        <span data-content="con ten t">contact</span> with <span data-content="wa ter">water</span>. What was that? It wasn't <span data-content="sup po's ed">supposed</span> to be <span data-content="st or my-(me)">stormy</span> today!
         I <span data-content="y ell ed">yelled</span>. The <span data-content="for cas t">forecast</span> said it <span data-content="wo uld-(ood)">would</span> be clear and <span data-content="car m">calm</span> until 6 p.m. but as they say,</p>
           <div class="page-number">
             2
@@ -112,7 +112,7 @@
         <p>“The <span data-conetnt="w e the r">weather</span> <span data-content="for ca st">forecast</span> could be <span data-content="w ro ng">wrong</span>.” <span data-content="How ever">However</span>, most <span data-content="like ly">likely</span>
           it was a <span data-content="ro' g">rogue</span> wave which can <span data-content="t ra ve l">travel</span> <span data-content="h un dred s">hundreds</span> of <span data-content="my l s">miles</span> <span data-content="a c ros s">across</span>
           the <span data-content="o'ce an">ocean</span> and <span data-content="cap size">capsize</span> <span data-content="un sus pec ting">unsuspecting</span> boats. I
-           <span data-content="c ould-(ood) n t">couldn't</span> think about that right now and needed to <span data-content="fo c us">focus</span> on <span data-content="su vi val">survival</span>. First,</p>
+           <span data-content="c ould-(ood) n t">couldn't</span> think about that right now and needed to <span data-content="fo c us">focus</span> on my <span data-content="su vi val">survival</span>. First,</p>
           <div class="page-number">
             3
           </div>
@@ -123,8 +123,8 @@
       <div class="pages d-block w-50">
         <p>I <span data-content="tri ed">tried</span> <span data-content="look ing">looking</span> <span data-content="a ro un d">around</span> for the lights of the boat
           but it was <span data-content="com ple' tl">completely</span> <span data-content="d ar k">dark</span>. The boat crew and captain would be looking around and yelling for me but I
-           couldn't hear <span data-content="any thing">anything</span>.Then out of <span data-content="no where">nowhere</span> something came <span data-content="fly ing">flying</span>
-           at me and <span data-content="_nock ed">knocked</span> me <span data-content="un con scious-(sh us)">unconscious</span>.</p>
+           couldn't hear <span data-content="any thing">anything</span>. Then out of <span data-content="no where">nowhere</span> something came <span data-content="fly ing">flying</span>
+           at my head and <span data-content="_nock ed">knocked</span> me <span data-content="un con scious-(sh us)">unconscious</span>.</p>
           <div class="page-number">
             4
           </div>
@@ -133,7 +133,7 @@
     <div class="carousel-item carousel5">
 
       <div class="pages d-block w-50">
-        <p>I feel the <span data-content="warm">war m</span> ocean water around my feet and <span data-content="s and">sand</span> <span data-content="be t wee' n">between</span> my <span data-content="l ip s">lips</span>.
+        <p>I feel the <span data-content="war m">warm</span> ocean water around my feet and <span data-content="s and">sand</span> <span data-content="be t wee' n">between</span> my <span data-content="l ip s">lips</span>.
            The hot sun <span data-content="be' ting">beating</span> <span data-content="ag ain st">against</span> my <span data-content="s kin">skin</span> <span data-content="be'gan">began</span> to <span data-content="s ting">sting</span>.
            I sat up and <span data-content="rub bed">rubbed</span> my <span data-content="he d">head</span>. I <span data-content="f el t">felt</span> a <span data-content="sh ar' p">sharp</span> <span data-content="p a'in">pain</span>; something <span data-content="h ar' d">hard</span> must have hit my head.</p>
           <div class="page-number">
@@ -145,7 +145,7 @@
 
       <div class="pages d-block w-50">
         <p>By some <span data-content="mi ra cle-(kle) ">miracle </span>I am still <span data-content="a li ve">alive</span> and very <span data-content="thank ful">thankful</span> for that.
-          I <span data-content="tri' ed">tried</span> to stand up but <span data-content="c ood">could</span> <span data-content="not hing">nothing</span>; my <span data-content="le gs">legs</span> felt like <span data-content="rub ber">rubber</span>. I looked out <span data-content="o' ver">over</span> the ocean from the
+          I <span data-content="tri' ed">tried</span> to stand up but <span data-content="c ood n 't'">couldn't</span> do so; my <span data-content="le gs">legs</span> felt like <span data-content="rub ber">rubber</span>. I looked out <span data-content="o' ver">over</span> the ocean from the
           <span data-content="bee' ch">beach</span> and all I could see was nothing but <span data-content="em p ty">empty</span> <span data-content="see">sea</span>. Not a <span data-content="sing gl">single</span> ocean going <span data-content="ves sel">vessel</span> in <span data-content="s i' t">sight</span>.</p>
           <div class="page-number">
             6
@@ -157,7 +157,7 @@
       <div class="pages d-block w-50" style="color:; background-color:lightgrey;">
         <p>As I <span data-content="grad u' all y">gradually</span> got my <span data-content="st ren _th">strength</span> back I began to look around the <span data-content="i'_land">island</span> from
           the <span data-content="bee' ch">beach</span>…nothing but <span data-content="tree' s">trees</span>. No <span data-content="si'_n">sign</span> of life <span data-content="any where">anywhere</span> <span data-content="sa' ve">save</span> for a <span data-content="f u'">few</span> <span data-content="c rab s">crabs</span>
-          and <span data-content="b er ds">birds</span>. A <span data-content="sen se">sense</span> of <span data-content="pan ic">panic</span> came over me. How am I going to <span data-content="sur vi' ve">survive</span>? Before long my</p>
+          and <span data-content="b er ds">birds</span>. A <span data-content="sen se">sense</span> of <span data-content="pan ic">panic</span> came over me. How am I going to <span data-content="sur vi' ve">survive</span>? Before long I began to</p>
           <div class="page-number">
             7
           </div>
@@ -166,7 +166,7 @@
     <div class="carousel-item carousel8">
 
       <div class="pages d-block w-50">
-        <p><span data-content="tra'_ning">training</span> <span data-content="k ick ed">kicked</span> in. Before going out to sea, the <span data-content="en ti' re-(er)">entire</span> <span data-content="c ru'">crew</span> of the ship had to
+        <p> <span data-content="re mem ber">remember</span> my <span data-content="tra'_ning">training</span>. Before going out to sea, the <span data-content="en ti' re-(er)">entire</span> <span data-content="c ru'">crew</span> of the ship had to
            take a <span data-content="sur vi val">survival</span> <span data-content="c-(k) l ass">class</span> just in <span data-content="ca' se">case</span> something like this <span data-content="hap pen ed">happened</span>. The first thing
             I must do  is to <span data-content="as s ess">assess</span> my <span data-content="phy-(fe') si cal">physical</span> <span data-content="con di tion-(shon)">condition</span>. <span data-content="A part">Apart</span> from the <span data-content="sh arp">sharp</span>
             <span data-content="pa' in">pain</span> on</p>
@@ -190,7 +190,7 @@
     <div class="carousel-item carousel10">
 
       <div class="pages d-block w-50">
-        <p>around the boat all the time which is why it was <span data-content="se cur ed">secured</span> to my <span data-content="b el t">belt</span>…<span data-content="luc ky">lucky</span> me.
+        <p>around the boat all the time which is why it was <span data-content="se cur ed">secured</span> to my <span data-content="b el t">belt</span>…<span data-content="luc ky">lucky</span> me!
            The next thing is to <span data-content="es tab lish">establish</span> <span data-content="sh el ter">shelter</span> in a <span data-content="sa'fe">safe</span> place free of <span data-content="da'n ger ous">dangerous</span> <span data-content="wild life">wildlife</span>;
             to do that I need to do some <span data-content="ex pl or ing">exploring</span>. It was early in the <span data-content="mor ning">morning</span> <span data-content="ac cor ding">according</span></p>
           <div class="page-number">
@@ -248,7 +248,7 @@
       <div class="pages d-block w-50" style="color:; background-color:lightgrey;">
         <p>to make a <span data-content="sig nal">signal</span> fire pile. I found empty soda cans, the bottom of which can
            be used to make a <span data-content="sun light">sunlight</span> <span data-content="re flec tor">reflector</span> which can be seen from miles away by
-           passing sea boats or <span data-content="air craf ts">aircrafts</span>. It will be night soon and I become <span data-content="over w hel med">overwhelmed</span> by sleep.</p>
+           passing sea boats or <span data-content="air craf ts">aircrafts</span>. It will be night soon and I became <span data-content="over w hel med">overwhelmed</span> by sleep.</p>
           <div class="page-number">
             15
           </div>
@@ -258,7 +258,7 @@
 
       <div class="pages d-block w-50">
         <p>My <span data-content="sto ma ch-(k)">stomach</span> <span data-content="g row led">growled</span> but I was too <span data-content="ti' red-(er d)">tired</span> to care. My eyes <span data-content="cl-(k) os ed">closed</span> as soon as I fell onto
-           the <span data-content="make shift">makeshift</span> bed. The next day I woke up early. My <span data-content="wat ch">watch</span> said 6:04 am. A small
+           the <span data-content="make shift">makeshift</span> bed. The next day I woke up early. My <span data-content="wat ch">watch</span> said 6:04 A.M. A small
            pool of <span data-content="f re sh">fresh</span> water <span data-content="for m ed">formed</span> in a small <span data-content="na tu' ral">natural</span> <span data-content="cat ch ment">catchment</span> area of the cave.</p>
           <div class="page-number">
             16
@@ -268,7 +268,7 @@
     <div class="carousel-item carousel17">
 
       <div class="pages d-block w-50">
-        <p>It must have <span data-content=""></span> last <span data-content="ni' ght-(t)">night</span>. The pool of <span data-content="fre sh">fresh</span> water was a life <span data-content="sa' ver">saver</span>. I <span data-content="d ran k">drank</span>
+        <p>It must have <span data-content="ra' in ed">rained</span> last <span data-content="ni' ght-(t)">night</span>. The pool of <span data-content="fre sh">fresh</span> water was a life <span data-content="sa' ver">saver</span>. I <span data-content="d ran k">drank</span>
           <span data-content="di' rect ly">directly</span> from the pool of water and saved as much of it as I could in <span data-content="p las tic">plastic</span> jugs
           I found <span data-content="wa sh ed">washed</span> up on the island. I got some <span data-content="brea'k fast">breakfast</span>, fresh <span data-content="con ch">conch</span>, coconut  water</p>
           <div class="page-number">
@@ -280,7 +280,7 @@
 
       <div class="pages d-block w-50">
         <p>and some <span data-content="left over">leftover</span> <span data-content="b err ies">berries</span> from <span data-content="yes ter day">yesterday</span>. After my <span data-content="me' al-(l)">meal</span>  I <span data-content="con tin u' ed">continued</span> exploring the island.
-           From from my exploration I have <span data-content="de ter min ed">determined</span> that I am on an <span data-content="a toll">atoll</span>. An atoll is the <span data-content="rem nan ce">remnance</span> of an <span data-content="a'n ci ent">ancient</span> <span data-content="vol ca'no">volcano</span>, which over time
+           From my exploration I have <span data-content="de ter min ed">determined</span> that I am on an <span data-content="a toll">atoll</span>. An atoll is the <span data-content="rem nan ce">remnance</span> of an <span data-content="a'n ci ent">ancient</span> <span data-content="vol ca'no">volcano</span>, which over time
            became an island <span data-content="sur ro un ded">surrounded</span> by a reef with a <span data-content="la goon">lagoon</span></p>
           <div class="page-number">
             18
@@ -313,7 +313,7 @@
 
       <div class="pages d-block w-50">
         <p>to keep <span data-content="busy-(be'ze')">busy</span> and <span data-content="fo cus">focus</span> on surviving will help <span data-content="de' l">deal</span> with sad feelings. I <span data-content="th ough-(or) t">thought</span> of all
-           my <span data-content="fa mi ly">family</span> <span data-content="mem bers">members</span> and what they may be going <span data-content="th rou' gh-(h)">through</span>; by now they must think I'm <span data-content="de _d">dead</span>
+           my friends and <span data-content="fa mi ly">family</span> <span data-content="mem bers">members</span> and what they may be going <span data-content="th rou' gh-(h)">through</span>; by now they must think I'm <span data-content="de _d">dead</span>
            and this makes me <span data-content="v er y">very</span> sad. On the 22nd day I <span data-content="a ro se">arose</span> out of my sleep</p>
           <div class="page-number">
             21
