Final proof on aug 19 2022

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <div class="carousel-item carousel22">
 
       <div class="pages d-block w-50">
-        <p>to the <span data-content="s oun d">sound</span> of what sounded like a <span data-content="he li cop ter">helicopter</span> close by. I ran out of my cave and
+        <p>to what <span data-content="s oun ded">sounded</span> like a <span data-content="he li cop ter">helicopter</span> <span data-content="hov er ing">hovering</span> close by. I ran out of my cave and
           ran down to the <span data-content="bee' ch">beach</span>. I could <span data-content="he air">hear</span> the <span data-content="un mis ta' ka ble">unmistakable</span> sound of a helicopter but I
           <span data-content="cou_d n 't">couldn't</span> see <span data-content="any thing">anything</span>. As I <span data-content="lis _en ed">listened</span> <span data-content="c lose ly">closely</span> the <span data-content="no is e">noise</span> was coming from the <span data-content="o the r">other</span></p>
           <div class="page-number">
